Add event participations
