# src/models/eventModel.js
@@ -3,13 +3,17 @@ const SQL = require('sql-template-strings')
 const dbCtrl = require('../ctrls/dbCtrl')
 
 async function create(event) {
-    const query = SQL`
+    let query = SQL`
         INSERT INTO eventos(titulo, descripcion, fecha, hora, localizacion, idcreador)
         values(${event.titulo}, ${event.descripcion}, ${event.fecha}, ${event.hora},
             ${event.localizacion}, ${event.idcreador})
         RETURNING id`
     const res = await dbCtrl.execute(query)
     const id = res.rows[0].id
+    query = SQL`
+        INSERT INTO participacionevento(idevento, idusuario)
+        values (${id}, ${event.idcreador})`
+    await dbCtrl.execute(query)
     return { id }
 }
 
@@ -23,14 +27,14 @@ async function get(id) {
 }
 
 async function del(id) {
-    const query1 = SQL`
+    let query = SQL`
         DELETE FROM participacionevento
         WHERE idevento = ${id}`
-    const query2 = SQL`
+    await dbCtrl.execute(query)
+    query = SQL`
         DELETE FROM eventos
         WHERE id = ${id}`
-    await dbCtrl.execute(query1)
-    await dbCtrl.execute(query2)
+    await dbCtrl.execute(query)
 }
 
 async function edit(id, event) {
@@ -42,10 +46,18 @@ async function edit(id, event) {
     await dbCtrl.execute(query)
 }
 
+async function join(id, { idusuario }) {
+    const query = SQL`
+        INSERT INTO participacionevento(idevento, idusuario)
+        values (${id}, ${idusuario})`
+    await dbCtrl.execute(query)
+}
+
 
 module.exports = {
     create,
     del,
     edit,
-    get
+    get,
+    join
 }
